--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "snake",
   "private": true,
   "dependencies": {
-    "hammerjs": "~2.0.6"
+    "hammerjs": "~2.0.6",
+    "hammer-time": "^1.0.0",
+    "js-cookie": "^2.1.0"
   },
   "devDependencies": {
     "chai": "~3.4.2",
